--- a/bin/html/css/style.css
+++ b/bin/html/css/style.css
@@ -41,14 +41,22 @@
 
 .console_actual {
 	position: 	absolute;
-	width:		1183px;
+	width:		1178px;
 	height:		500;
 	top:		46;
 	z-index: 	5;
-	left: 		9;
+	left: 		14;
 	background: #FAFAFA;
 }
-
+.console_topbar_title {
+	position: 	absolute;
+	left:		5;
+	top:		10;
+	font-weight:	bold;
+	font-family:	arial;
+	font-size:	12px;
+	color:		#FFFFFF;	
+}
 .navbar {
 	position: 	absolute;
 	width:		100%;
