Improved changelog page and changed cursor to a pointer on menu items

--- a/bin/html/css/developer-style.css
+++ b/bin/html/css/developer-style.css
@@ -1160,3 +1160,6 @@ select {
 .smallfield:last-child input {
 	-webkit-border-bottom-right-radius: 8px;
 }
+.topbarmenu td[onclick] {
+    cursor: pointer;
+}
