Adding new style elements! :) The show resource template is now nicer! (used on most pages, like fixes and build new model).

--- a/bin/html/css/developer-style.css
+++ b/bin/html/css/developer-style.css
@@ -1166,3 +1166,53 @@ select {
 .topbarmenu td[onclick] {
     cursor: pointer;
 }
+
+.pageitem_top {
+	font-style:bold;
+	-webkit-border-radius: 8px 8px 0px 0px;
+		background: rgb(30,87,153); /* Old browsers */
+		background: -moz-linear-gradient(top, rgb(30,87,153) 0%, rgb(239,238,241) 0%, rgb(213,217,220) 100%); /* FF3.6+ */
+		background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgb(30,87,153)), color-stop(0%,rgb(239,238,241)), color-stop(100%,rgb(213,217,220))); /* Chrome,Safari4+ */
+		background: -webkit-linear-gradient(top, rgb(30,87,153) 0%,rgb(239,238,241) 0%,rgb(213,217,220) 100%); /* Chrome10+,Safari5.1+ */
+		background: -o-linear-gradient(top, rgb(30,87,153) 0%,rgb(239,238,241) 0%,rgb(213,217,220) 100%); /* Opera 11.10+ */
+		background: -ms-linear-gradient(top, rgb(30,87,153) 0%,rgb(239,238,241) 0%,rgb(213,217,220) 100%); /* IE10+ */
+		background: linear-gradient(to bottom, rgb(30,87,153) 0%,rgb(239,238,241) 0%,rgb(213,217,220) 100%); /* W3C */
+	border-top: #92979D solid 1px;
+	border-left: #92979D solid 1px;
+	border-right: #92979D solid 1px;
+
+	font-size: 16pt;
+	color:#3A3D40;
+	padding-top: 30px;
+	padding-bottom:30px;
+	padding-left:10px;
+	height: auto;
+	width: auto;
+	margin-left:10px;
+	margin-right:15px;
+	margin-top:15px;
+}
+
+.pageitem_top img {
+	height:60px;
+	width:60px;
+	visibility: hidden;
+}
+
+.pageitem_bottom {
+	-webkit-border-radius: 0px 0px 8px 8px;
+	border: #878787 solid 1px;
+	background-color:white;
+	font-size: 10pt;
+	overflow: hidden;
+	padding: 0;
+	position: relative;
+	display: block;
+	height: auto;
+	width: auto;
+	margin-left:10px;
+	margin-right:15px;
+	margin-bottom:15px;
+	padding:10px;
+	list-style: none;
+}
