--- a/bin/html/css/developer-style.css
+++ b/bin/html/css/developer-style.css
@@ -2,7 +2,7 @@
 body {
 	position: relative;
 	margin: 0;
-	background-image: url('/images/console_bg.png');
+	background-color: transparent;
 	-webkit-text-size-adjust: none;
 	min-height: 416px;
 	font-family: 'Lucida Grande';
@@ -11,6 +11,7 @@ body {
 .console {
 	font-family: 'Lucida Grande';
 	font-size: 10pt;
+	background-color: transparent;
 }
 .topbarmenu {
 	font-family: 'Lucida Grande';
@@ -34,6 +35,7 @@ body {
 	z-index: 1;
 	left: 265px;
 	top: 69px;
+	background-color: transparent;
 }
 
 .center {
@@ -1194,7 +1196,7 @@ select {
 	float:left;
 	padding-top:10px;
 	padding-left:15px;
-	margin:0px;
+	margin:0px;	
 }
 
 .pageitem_top span {
@@ -1221,5 +1223,77 @@ select {
 	margin-right:15px;
 	margin-bottom:15px;
 	padding:10px;
+	list-style: none;
+}
+
+
+/* Menu */
+.pageitem_menu {
+	margin-left:10px;
+	margin-right:15px;
+	border-left: #878787 solid 1px;
+	border-right: #878787 solid 1px;
+
+
+}
+
+.pageitem_menu ul {
+	white-space: no-wrap;
+	margin-left:10px;
+	margin-right:15px;
+	background-image: url('/images/tab-bg.png');
+	height: 23px;
+	text-align: center;
+	padding:0;
+	margin:0;
+	list-style-type: none;
+	border-top: #A8A8A8 solid 1px;
+
+}
+
+.pageitem_menu li {
+	display:inline;
+	border-right:#A8A8A8 solid 1px;
+}
+
+.pageitem_menu li a {
+	padding-left:25px;
+	padding-right:25px;
+	color:#686868;
+	font-size: 10pt;
+	font-family: 'Helvetica';
+
+
+	text-decoration: none;
+	}
+
+.pageitem_menu li.active {
+	display:inline;
+	background-color:#000000;
+}
+
+
+/* Text */
+.pageitem_bottom h2 {
+	font-weight: bold;
+	font-size: 17px;
+	color: #62676C;
+	text-shadow: 0px 89px 32px 0;
+}
+
+
+/**** DROPDOWN ****/
+
+.dropdown {
+	background-color: #fff;
+	border: #878787 solid 1px;
+	font-size: 10pt;
+	overflow: hidden;
+	padding: 0;
+	position: relative;
+	display: block;
+	height: auto;
+	width: auto;
+	margin: 3px 9px 17px;
 	list-style: none;
 }
