Cosmetic fixes. Fixes, Tools and Changelog is still not working. Will be fixed tonight.

--- a/bin/html/css/developer-style.css
+++ b/bin/html/css/developer-style.css
@@ -482,7 +482,8 @@ fieldset {
 	overflow: hidden;
 	border-top: 1px solid #878787;
 	width: auto;
-        font-family: 'Lucida Grande', 'Lucida Sans Unicode';
+    font-family: 'Lucida Grande', 'Lucida Sans Unicode';
+    cursor: pointer;
 }
 .pageitem li:first-child:hover, .pageitem li:first-child a, .radiobutton:first-child input, .select:first-child select, li.button:first-child input, .bigfield:first-child input {
 	-webkit-border-top-left-radius: 8px;
